<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/Scrll_Drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="left|start"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:scrollbars="none"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left|start"
        android:background="@color/grey_3"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:weightSum="1">

        <!--region blue top layout-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:elevation="8dp"
            android:background="@color/colorPrimary"
            >

            <TextView
                android:id="@+id/tv_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="14dp"
                android:layout_marginBottom="8dp"
                android:text="XYZ XYZ"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="xyz@gmail.com"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/TextsubTitle"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="14dp"
                android:layout_marginBottom="14dp"
                android:layout_marginTop="14dp"
                android:background="@color/grey_5">
            </View>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginBottom="14dp">

                <ImageView
                    android:id="@+id/iv_institute"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_shield"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CHAT NOW"
                    android:layout_toRightOf="@+id/iv_institute"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_centerInParent="true"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold"
                    android:textSize="@dimen/largeTextSize"/>

                <ImageView
                    android:id="@+id/iv_next"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

        </LinearLayout>
        <!--endregion-->

        <!--region 2nd row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:background="@color/grey_10"
            android:orientation="horizontal"
            android:elevation="8dp"
            android:weightSum="3"
            >

            <LinearLayout
                android:id="@+id/ll_examAttempts"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey_3"
                android:orientation="vertical"
                android:layout_marginRight="1dp"
                android:layout_marginLeft="1dp"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/tv_examCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="3"
                    android:layout_gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/largeTextSize"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contact Person"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/smallTextSize"
                    />
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_parentsProfile"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/grey_3"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="3dp"
                    android:elevation="8dp"
                    android:layout_margin="12dp"
                    app:cardBackgroundColor="@color/colorAccent">

                    <TextView
                        android:id="@+id/tv_mobileNo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="+91 9830038989"
                        android:gravity="center"
                        android:textColor="@color/colorWhite" />

                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </LinearLayout>

        <!--endregion-->

        <!--region User Activity-->
        <!-- <TextView
             android:layout_width="wrap_content"
             android:layout_height="12dp"
             android:layout_marginLeft="14dp"
             android:layout_marginTop="12dp"
             android:layout_marginRight="14dp"
             android:layout_marginBottom="12dp"
             android:text=""
             android:textColor="@color/colorBlack"
             android:textSize="@dimen/TextsubTitle" />
 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="20dp"
            android:paddingBottom="14dp"
            android:background="@color/colorWhite">

            <!--region profile-->
            <RelativeLayout
                android:id="@+id/rl_profile"
                android:layout_width="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="14dp"
                android:layout_height="45dp">

                <ImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_person_black_24dp"
                    android:backgroundTint="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/tv_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="14dp"
                    android:layout_toRightOf="@+id/iv_profile"
                    android:gravity="center_vertical"
                    android:text="Profile"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />
            </RelativeLayout>
            <!--endregion-->

            <!--region home-->
            <RelativeLayout
                android:id="@+id/rl_home"
                android:layout_width="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="14dp"
                android:layout_height="45dp">

                <ImageView
                    android:id="@+id/iv_home"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/home" />

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="14dp"
                    android:layout_marginLeft="14dp"
                    android:layout_toEndOf="@+id/iv_home"
                    android:layout_toRightOf="@+id/iv_home"
                    android:gravity="center_vertical"
                    android:text="Home"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

            </RelativeLayout>
            <!--endregion-->

            <!--region Exams Attempt-->
            <RelativeLayout
                android:id="@+id/rl_contactUs"
                android:layout_width="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="14dp"
                android:layout_height="45dp"
                >

                <ImageView
                    android:id="@+id/iv_contactUs"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_person_black_24dp" />

                <TextView

                    android:id="@+id/tv_contactUs"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="14dp"
                    android:layout_toRightOf="@+id/iv_contactUs"
                    android:gravity="center_vertical"
                    android:text="@string/contactus"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />
            </RelativeLayout>
            <!--endregion-->

            <!--region History-->
            <RelativeLayout
                android:id="@+id/rl_history"
                android:layout_width="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="14dp"
                android:layout_height="45dp"
                android:visibility="gone"
                >

                <ImageView
                    android:id="@+id/iv_history"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_history"
                    />

                <TextView

                    android:id="@+id/tv_history"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="14dp"
                    android:layout_toRightOf="@+id/iv_history"
                    android:gravity="center_vertical"
                    android:text="@string/history"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />
            </RelativeLayout>
            <!--endregion-->

            <!--region share app -->
            <RelativeLayout
                android:id="@+id/rl_share"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="14dp">

                <ImageView
                    android:id="@+id/iv_share"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="13dp"
                    android:src="@drawable/ic_share_black_24dp"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_share_app"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:layout_toRightOf="@+id/iv_share"
                    android:text="@string/share_app"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />
            </RelativeLayout>
            <!--endregion-->
            <!--region invite-->
            <RelativeLayout
                android:id="@+id/rl_invite"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="14dp">

                <ImageView
                    android:id="@+id/iv_invite"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="13dp"
                    android:src="@drawable/ic_insert_invitation_black_24dp"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_invite"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_invite"
                    android:gravity="center_vertical"
                    android:text="@string/invite"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />
            </RelativeLayout>
            <!--endregion-->

            <!--region settings-->
            <RelativeLayout
                android:id="@+id/rl_settings"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="14dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/iv_settings"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="13dp"
                    android:src="@drawable/ic_settings_black_24dp"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_settings"
                    android:gravity="center_vertical"
                    android:text="@string/settings"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />
            </RelativeLayout>
            <!--endregion-->

            <!--region logout-->
            <RelativeLayout
                android:id="@+id/rl_logout"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="14dp">

                <ImageView
                    android:id="@+id/iv_logout"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="13dp"
                    android:src="@drawable/ic_logout"
                    android:tint="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/iv_logout"
                    android:gravity="center_vertical"
                    android:text="@string/logout"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />
            </RelativeLayout>
            <!--endregion-->


        </LinearLayout>
        <!--endregion-->

    </LinearLayout>


</ScrollView>